--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "netlify dev",
+    "build": "echo 'Build successful'"
   },
   "keywords": ["wash", "motors", "lavado"],
   "author": "",
@@ -17,7 +18,8 @@
     "csv-parser": "^3.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "netlify-cli": "^17.0.0"
   },
   "engines": {
     "node": "18.x"
