feat: Mejorar tarjetas de servicios y agregar CSP headers
- Agregar detalles únicos para cada tipo de lavado en lado trasero
- Reducir interlineado de detalles (space-y-3 → space-y-1)
- Unificar fuente Fredoka en todos los textos de detalles
- Agregar colores consistentes (azul para estándar, blanco para premium)
- Remover restricción de max-height en detail-list
- Agregar server.js para desarrollo local con soporte Netlify Functions
- Crear archivo cards.css con animación 3D de flip
- Agregar CSP headers en netlify.toml y server.js para Tailwind CDN
- Cambiar header a fondo blanco con texto azul
- Usar logo azul (Logotipo_azul.png) en header
- Mejorar parseado de CSV con normalización de columnas

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "netlify dev",
+    "dev": "node server.js",
     "build": "echo 'Build successful'"
   },
   "keywords": ["wash", "motors", "lavado"],
