--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 [build]
-  command = "npm install"
+  command = "npm install && npm run build"
   functions = "functions"
   publish = "public"
 
 [dev]
-  command = "npm run dev"
+  command = "node server.js"
   port = 3000
 
 [[redirects]]
@@ -14,3 +14,9 @@
 
 [functions]
   node_bundler = "esbuild"
+
+# Content Security Policy
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https:;"
